updated comments and styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +26,7 @@
         <!-- form container -->
 
         <!-- Screen 2 - personal details -->
-        <div class="screen two container" style="width: 600px;">
+        <div class="screen two container" style="width: 400px;">
             <h3 class="subtitle is-1">Let us get to know you!</h3>
             <div class="field">
                 <label class="label">Name</label>
@@ -40,22 +39,16 @@
                 <div class="control">
                     <div class="select">
                         <select>
-                            <option>18</option>
-                            <option>19</option>
-                            <option>20</option>
-                            <option>21</option>
-                            <option>22</option>
-                            <option>23</option>
-                            <option>24</option>
-                            <option>25</option>
-                            <option>26</option>
-                            <option>27</option>
-                            <option>28</option>
-                            <option>29</option>
-                            <option>30</option>
-                            <option>31</option>
-                            <option>32</option>
-                            <option>33</option>
+                            <option>18-22</option>
+                            <option>23-29</option>
+                            <option>30-39</option>
+                            <option>40-49</option>
+                            <option>50-59</option>
+                            <option>60-69</option>
+                            <option>70-79</option>
+                            <option>80-89</option>
+                            <option>90-99</option>
+                            <option>99+</option>
                         </select>
                     </div>
                 </div>
@@ -85,7 +78,7 @@
                     </div>
                 </div>
             </div>
-            <br><br>
+            <br>
             <div class="">
                 <div class="button is-small" id="cancelone">
                     <p>Cancel</p>
@@ -158,6 +151,9 @@
                     <option value="Shellfish">Shellfish</option>
                     <option value="Wheat">Wheat</option>
                     <option value="Soy">Soy</option>
+                    <option value="Fish">Fish</option>
+                    <option value="Fish">Fish</option>
+                    <option value="Fish">Fish</option>
                     <option value="Fish">Fish</option>
                 </select>
             </div>
