--- a/index.html
+++ b/index.html
@@ -94,6 +94,17 @@
         <div class="screen three container" style="width: 600px;">
             <h3 class="subtitle is-1">Tell us some more! If you'd like...</h3>
             <div class="select is-multiple">
+                <label class="label">Activity Level</label>
+                <select multiple size="4" style="width: 400px" id="activityValue">
+                    <option value="Sedentary">Sedentary</option>
+                    <option value="Lightly Active">Lightly Active</option>
+                    <option value="Moderately Active">Moderately Active</option>
+                    <option value="Highly Active">Highly Active</option>
+                </select>
+            </div>
+            <br>
+            <br>
+            <div class="select is-multiple">
                 <label class="label">Do you have any dietary preferences?</label>
                 <select multiple size="6" style="width: 400px" id="dietaryValue">
                     <option value="none">None</option>
