update choose goals input

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
             <br>
             <br>
             <div class="select is-multiple">
+                <label class="label">What's your goal?</label>
+                <select multiple size="3" style="width: 400px" id="goalValue">
+                    <option value="Lose Weight">Lose Weight</option>
+                    <option value="Maintain Weight">Maintain Weight</option>
+                    <option value="Increase Weight">Increase Weight</option>
+                </select>
+            </div>
+            <br>
+            <br>
+            <div class="select is-multiple">
                 <label class="label">Do you have any dietary preferences?</label>
                 <select multiple size="6" style="width: 400px" id="dietaryValue">
                     <option value="none">None</option>
