add template for create meal plan sections with appropriate id's

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -9,9 +9,20 @@
 </head>
 
 <body>
-    <h1>Create meal plan page</h1>
+    <h1 class="subtitle is-1">Create Meal Plan</h1>
+
+<div class="columns">
+    <div class="column is-one-third">
+       <div id="recipe-image"></div>
+       <div id="recipe-ingredients"></div>
+    </div>
+    <div class="column is-two-thirds">
+        <div id="recipe-title"></div>
+        <div id="recipe-steps"></div>
+    </div>
+  </div>
+
     <!-- script links -->
     <script src="./assets/js/script.js"></script>
 </body>
-
 </html>
