update template and modal window inputs

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -28,15 +28,15 @@
       </header>
       <section class="modal-card-body">
         <div class="field">
-            <label class="label">How many recipes would you like?</label>
+            <label class="label">how many calories?</label>
             <div class="control">
-              <input class="input" type="text" placeholder="4 meals">
+                <input class="input" type="text" placeholder="e.g John Smith" id="recipesNum">
             </div>
-          </div>
+        </div>
           <div class="field">
             <label class="label">How many calories would you like, in total?</label>
-            <div class="control">
-              <input class="input" type="text" placeholder="2500 calories" id="recipeValue">
+            <div class="control" id="calNum">
+              <input class="input recipesNum" type="text" placeholder="2500 calories" >
             </div>
             <p class="help">The average man should consume 2500 calories a day, for women, this is 2000 calories </p>
           </div>
