added an edit profile button so that users can change input fields as they progress

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1 class="subtitle is-1">Create Meal Plan</h1>
-    <button class="button is-medium"><a href="./index.html">Edit profile</a></button>
+    <button class="button is-medium editBtn"><a href="./editprofile.html">Edit profile</a></button>
 
 <button class="button is-medium open-modal">Open Modal</button>
 <div class="modal">
