--- a/editprofile.html
+++ b/editprofile.html
@@ -17,8 +17,8 @@
 
             <div>
                 <div class="buttons" style="float:right;">
-                    <button class="button is-large" type="button" id="reg-now">Register Now</button>
-                    <button class="button is-large" type="button" id="reg-later"><a href="./c.create_meal_plan.html">Register Later</a></button>
+                    <button class="button is-large" type="button" id="reg-now">Edit Profile</button>
+                    <button class="button is-large" type="button" id="reg-later"><a href=".//c.create_meal_plan.html">Skip</a></button>
                 </div>
             </div>
         </div>
