update file path names

--- a/editprofile.html
+++ b/editprofile.html
@@ -18,7 +18,7 @@
             <div>
                 <div class="buttons" style="float:right;">
                     <button class="button is-large" type="button" id="reg-now">Edit Profile</button>
-                    <button class="button is-large" type="button" id="reg-later"><a href=".//c.create_meal_plan.html">Skip</a></button>
+                    <button class="button is-large" type="button" id="reg-later"><a href="./c.create_meal_plan.html">Skip</a></button>
                 </div>
             </div>
         </div>
@@ -164,7 +164,7 @@
                     <p>Cancel</p>
                 </div>
                 <div class="button is-small" id="nextBtnThree">
-                    <p><a href=".//c.create_meal_plan.html">Submit</a></p>
+                    <p><a href="./c.create_meal_plan.html">Submit</a></p>
                 </div>
             </div>
         </div>
