--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -1,19 +1,23 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-    <title>The Real Meal App: Sign Up</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
+  <title>The Real Meal App: Sign Up</title>
 </head>
 
 <body>
-    <h1 class="subtitle is-1">Create Meal Plan</h1>
-    <button class="button is-medium editBtn"><a href="./editprofile.html">Edit profile</a></button>
+  <h2 class="signupheader" id="signupmargin">Create Meal Plan</h2>  
+  <a class="button is-medium" type="button" id="editBtn" href="./editprofile.html">Edit profile</a>
+  <div class="buttons">
+    <button class="button is-large open-modal" id="reg-later" style="width: 250px;">Generate Meal Plan</button>
+  </div>
 
-<button class="button is-medium open-modal">Open Modal</button>
-<div class="modal">
+  <div class="modal">
     <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
@@ -22,31 +26,31 @@
       </header>
       <section class="modal-card-body">
         <div class="field">
-            <label class="label">How many recipes would you like?</label>
-            <div class="control">
-                <input class="input" type="text" placeholder="5" id="recipesNum">
-            </div>
-        </div>
-          <div class="field">
-            <label class="label">How many calories would you like, in total?</label>
-            <div class="control" id="calNum">
-              <input class="input recipesNum" type="text" placeholder="2500 calories" >
-            </div>
-            <p class="help">The average man should consume 2500 calories a day, for women, this is 2000 calories </p>
+          <label class="label">How many recipes would you like?</label>
+          <div class="control">
+            <input class="input recipeNum" type="text" placeholder="5">
           </div>
-          <div class="select is-multiple">
-            <label class="label">Do you have any dietary preferences?</label>
-            <select multiple size="4" style="width: 600px" id="dietaryValue">
-                <option value="none">None</option>
-                <option value="gluten-free">Gluten Free</option>
-                <option value="vegetarian">Vegetarian</option>
-                <option value="vegan">Vegan</option>
-                <option value="lacto-vegetarian">Lacto-Vegetarian</option>
-                <option value="ovo-vegetarian">Ovo-Vegetarian</option>
-                <option value="pescetarian">Pescetarian</option>
-                <option value="paleo">Paleo</option>
-                <option value="primal">Primal</option>
-            </select>
+        </div>
+        <div class="field">
+          <label class="label">How many calories would you like, in total?</label>
+          <div class="control">
+            <input class="input calNum" type="text" placeholder="2500 calories">
+          </div>
+          <p class="help">The average man should consume 2500 calories a day, for women, this is 2000 calories </p>
+        </div>
+        <div class="select is-multiple">
+          <label class="label">Do you have any dietary preferences?</label>
+          <select multiple size="4" style="width: 600px" id="dietaryQuick">
+            <option value="none">None</option>
+            <option value="gluten-free">Gluten Free</option>
+            <option value="vegetarian">Vegetarian</option>
+            <option value="vegan">Vegan</option>
+            <option value="lacto-vegetarian">Lacto-Vegetarian</option>
+            <option value="ovo-vegetarian">Ovo-Vegetarian</option>
+            <option value="pescetarian">Pescetarian</option>
+            <option value="paleo">Paleo</option>
+            <option value="primal">Primal</option>
+          </select>
         </div>
 
       </section>
@@ -57,18 +61,19 @@
     </div>
   </div>
 
-<div class="columns create-meal-plan">
+  <div class="columns create-meal-plan">
     <div class="column is-one-third">
-       <div id="recipe-image"></div>
-       <div id="recipe-ingredients"></div>
+      <div id="recipe-image"></div>
+      <div id="recipe-ingredients"></div>
     </div>
     <div class="column is-two-thirds">
-        <div id="recipe-title"></div>
-        <div id="recipe-steps"></div>
+      <div id="recipe-title"></div>
+      <div id="recipe-steps"></div>
     </div>
   </div>
 
-    <!-- script links -->
-    <script src="./assets/js/createmealplan.js"></script>
+  <!-- script links -->
+  <script src="./assets/js/createmealplan.js"></script>
 </body>
+
 </html>
