--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h2 class="signupheader" id="signupmargin">The Real Meal</h2>
 
             <div>
-                <div class="buttons" style="float:right;">
-                    <button class="button is-large" type="button" id="reg-now">Register Now</button>
-                    <button class="button is-large" type="button" id="reg-later"><a href="./c.create_meal_plan.html">Register Later</a></button>
+                <div class="buttons">
+                    <button class="button is-medium" type="button" id="reg-now">Register Now</button>
+                    <a class="button is-medium" type="button" id="reg-later" href="./c.create_meal_plan.html">Register Later</a>
                 </div>
             </div>
         </div>
@@ -81,10 +81,10 @@
             </div>
             <br>
             <div class="">
-                <div class="button is-small" id="cancelone">
+                <div class="button is-medium" id="cancelone">
                     <p>Cancel</p>
                 </div>
-                <div class="button is-small" id="nextBtnOne">
+                <div class="button is-medium" id="nextBtnOne">
                     <p>Next</p>
                 </div>
             </div>
@@ -92,7 +92,7 @@
 
         <!-- Screen 3 - more info -->
         <div class="screen three container" style="width: 600px;">
-            <h3 class="subtitle is-1">Tell us some more! If you'd like...</h3>
+            <h3 class="subtitle is-1">Tell us some more!</h3>
             <div class="select is-multiple">
                 <label class="label">Activity Level</label>
                 <select multiple size="4" style="width: 400px" id="activityValue">
@@ -131,10 +131,10 @@
             </div>
             <br><br>
             <div>
-                <div class="button is-small" id="canceltwo">
+                <div class="button is-medium" id="canceltwo">
                     <p>Cancel</p>
                 </div>
-                <div class="button is-small" id="nextBtnTwo">
+                <div class="button is-medium" id="nextBtnTwo">
                     <p>Next</p>
                 </div>
             </div>
@@ -146,25 +146,27 @@
             <div class="select is-multiple">
                 <label class="label">Do you have any allergies?</label>
                 <select multiple size="8" style="width: 400px" id="allergyValue">
+                    <option value="Dairy">Dairy</option>
                     <option value="Eggs">Eggs</option>
-                    <option value="Tree Nuts">Tree Nuts</option>
+                    <option value="Gluten">Gluten</option>
+                    <option value="Grain">Grains</option>
                     <option value="Peanuts">Peanuts</option>
+                    <option value="Seafood">Seafood</option>
+                    <option value="Sesame">Sesame</option>
                     <option value="Shellfish">Shellfish</option>
-                    <option value="Wheat">Wheat</option>
                     <option value="Soy">Soy</option>
-                    <option value="Fish">Fish</option>
-                    <option value="Fish">Fish</option>
-                    <option value="Fish">Fish</option>
-                    <option value="Fish">Fish</option>
+                    <option value="Sulfite">Sulfites</option>
+                    <option value="Tree Nuts">Tree Nuts</option>
+                    <option value="Wheat">Wheat</option>
                 </select>
             </div>
             <br><br>
             <div class="">
-                <div class="button is-small" id="cancelthree">
+                <div class="button is-medium" id="cancelthree">
                     <p>Cancel</p>
                 </div>
-                <div class="button is-small" id="nextBtnThree">
-                    <p><a href=".//c.create_meal_plan.html">Submit</a></p>
+                <div class="button is-medium" id="nextBtnThree">
+                    <a href=".//c.create_meal_plan.html">Submit</a>
                 </div>
             </div>
         </div>
