update submit buttons to play nicer with bulma api, remove blue underline

--- a/editprofile.html
+++ b/editprofile.html
@@ -161,14 +161,10 @@
                 </select>
             </div>
             <br><br>
-            <div class="">
                 <div class="button is-medium" id="cancelthree">
                     <p>Cancel</p>
                 </div>
-                <div class="button is-medium" id="nextBtnThree">
-                    <a href="./c.create_meal_plan.html">Submit</a>
-                </div>
-            </div>
+                <a class="button is-medium" id="nextBtnThree" href="./c.create_meal_plan.html">Submit</a>
         </div>
     </section>
 
