new user profile object

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -40,7 +40,7 @@
         </div>
         <div class="select is-multiple">
           <label class="label">Do you have any dietary preferences?</label>
-          <select multiple size="4" style="width: 600px" id="dietaryQuick">
+          <select class="input"multiple size="4" style="width: 600px" id="dietaryQuick">
             <option value="none">None</option>
             <option value="gluten-free">Gluten Free</option>
             <option value="vegetarian">Vegetarian</option>
@@ -73,7 +73,7 @@
   </div>
 
   <!-- script links -->
-  <script src="./assets/js/createmealplan.js"></script>
+  <script src="./assets/js/testMeal.js"></script>
 </body>
 
 </html>
