--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <label class="label">Age</label>
                 <div class="control">
                     <div class="select">
-                        <select id="ageValue">
+                        <select class="input" id="ageValue">
                             <option></option>
                             <option>18-22</option>
                             <option>23-29</option>
@@ -70,7 +70,7 @@
                 <label class="label">Gender</label>
                 <div class="control">
                     <div class="select">
-                        <select id="genderValue">
+                        <select class="input" id="genderValue">
                             <option>Male</option>
                             <option>Female</option>
                             <option>Other</option>
@@ -95,7 +95,7 @@
             <h3 class="subtitle is-1">Tell us some more!</h3>
             <div class="select is-multiple">
                 <label class="label">Activity Level</label>
-                <select multiple size="4" style="width: 400px" id="activityValue">
+                <select class="input" multiple size="4" style="width: 400px" id="activityValue">
                     <option value="Sedentary">Sedentary</option>
                     <option value="Lightly Active">Lightly Active</option>
                     <option value="Moderately Active">Moderately Active</option>
@@ -106,7 +106,7 @@
             <br>
             <div class="select is-multiple">
                 <label class="label">What's your goal?</label>
-                <select multiple size="3" style="width: 400px" id="goalValue">
+                <select class="input" multiple size="3" style="width: 400px" id="goalValue">
                     <option value="Lose Weight">Lose Weight</option>
                     <option value="Maintain Weight">Maintain Weight</option>
                     <option value="Increase Weight">Increase Weight</option>
@@ -116,7 +116,7 @@
             <br>
             <div class="select is-multiple">
                 <label class="label">Do you have any dietary preferences?</label>
-                <select multiple size="6" style="width: 400px" id="dietaryValue">
+                <select class="input" multiple size="6" style="width: 400px" id="dietaryValue">
                     <option value="none">None</option>
                     <option value="choose-later">Choose Later</option>
                     <option value="gluten-free">Gluten Free</option>
@@ -145,7 +145,7 @@
             <h3 class="subtitle is-1">And most importantly...</h3>
             <div class="select is-multiple">
                 <label class="label">Do you have any allergies?</label>
-                <select multiple size="8" style="width: 400px" id="allergyValue">
+                <select class="input" multiple size="8" style="width: 400px" id="allergyValue">
                     <option value="Dairy">Dairy</option>
                     <option value="Eggs">Eggs</option>
                     <option value="Gluten">Gluten</option>
@@ -164,12 +164,12 @@
                 <div class="button is-medium" id="cancelthree">
                     <p>Cancel</p>
                 </div>
-                <a class="button is-medium" id="nextBtnThree" href=".//c.create_meal_plan.html">Submit</a>
+                <a class="button is-medium" id="nextBtnThree">Submit</a>
         </div>
     </section>
 
     <!-- script links -->
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/test.js"></script>
 </body>
 
 </html>
