added a new js for the second html file after submit, it display one recipe only

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -9,9 +9,19 @@
 </head>
 
 <body>
-    <h1>Create meal plan page</h1>
+
+    <div id="MainDiv">
+        <h1 id="name"></h1>
+        <hr>
+        <p>Step: <span id="number-step"></span></p>
+        <br>
+        <p id="step"></p>
+        <br>
+    </div>
+    
     <!-- script links -->
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/display_preferences.js"></script>
 </body>
 
 </html>
