--- a/r.sign_up_on_site.html
+++ b/r.sign_up_on_site.html
@@ -117,16 +117,16 @@
             <div class="select is-multiple">
                 <label class="label">Do you have any dietary preferences?</label>
                 <select multiple size="6" style="width: 400px" id="dietaryValue">
-                    <option value="none">None</option>
+                    <option value="whole30">None</option>
                     <option value="choose-later">Choose Later</option>
-                    <option value="gluten-free">Gluten Free</option>
+                    <option value="Gluten_Free">Gluten Free</option>
                     <option value="vegetarian">Vegetarian</option>
                     <option value="vegan">Vegan</option>
                     <option value="lacto-vegetarian">Lacto-Vegetarian</option>
                     <option value="ovo-vegetarian">Ovo-Vegetarian</option>
-                    <option value="pescetarian">Pescetarian</option>
+                    <option value="Pescetarian">Pescetarian</option>
                     <option value="paleo">Paleo</option>
-                    <option value="primal">Primal</option>
+                    <option value="Primal">Primal</option>
                 </select>
             </div>
             <br><br>
