add cuisine type

--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -39,18 +39,24 @@
           <p class="help">The average man should consume 2500 calories a day, for women, this is 2000 calories </p>
         </div>
         <div class="select is-multiple">
-          <label class="label">Do you have any dietary preferences?</label>
-          <select class="input"multiple size="4" style="width: 600px" id="dietaryQuick">
+          <label class="label">Choose cuisine:</label>
+          <select class="input"multiple size="6" style="width: 600px" id="cuisineType">
             <option value="none">None</option>
-            <option value="gluten-free">Gluten Free</option>
-            <option value="vegetarian">Vegetarian</option>
-            <option value="vegan">Vegan</option>
-            <option value="lacto-vegetarian">Lacto-Vegetarian</option>
-            <option value="ovo-vegetarian">Ovo-Vegetarian</option>
-            <option value="pescetarian">Pescetarian</option>
-            <option value="paleo">Paleo</option>
-            <option value="primal">Primal</option>
+            <option value="American">American</option>
+            <option value="Cajun">Cajun</option>
+            <option value="Chinese">Chinese</option>
+            <option value="European">European</option>
+            <option value="German">German</option>
+            <option value="Indian">Indian</option>
+            <option value="Italian">Italian</option>
+            <option value="Jewish">Jewish</option>
+            <option value="Latin American">Latin American</option>
+            <option value="Mexican">Mexican</option>
+            <option value="Nordic">Nordic</option>
+            <option value="Spanish">Spanish</option>
+            <option value="Vietnamese">Vietnamese</option>
           </select>
+
         </div>
 
       </section>
