--- a/c.create_meal_plan.html
+++ b/c.create_meal_plan.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/style.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
-  <title>The Real Meal App: Sign Up</title>
+  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <title>The Real Meal App</title>
 </head>
 
 <body>
-  <h2 class="signupheader" id="signupmargin">Create Meal Plan</h2>  
   <a class="button is-medium" type="button" id="editBtn" href="./editprofile.html">Edit profile</a>
-  <div class="buttons">
-    <button class="button is-large open-modal" id="reg-later" style="width: 250px;">Generate Meal Plan</button>
-  </div>
+
+    <h2 class="signupheader" id="signupmargin">Create Meal Plan</h2>
+    <div class="buttons">
+      <button class="button is-large open-modal" id="reg-later" style="width: 250px;">Generate Meal Plan</button>
+    </div>
 
   <div class="modal">
     <div class="modal-background"></div>
@@ -26,9 +28,9 @@
       </header>
       <section class="modal-card-body">
         <div class="field">
-          <label class="label">How many recipes would you like?</label>
+          <label class="label">How many days of meals would you like?</label>
           <div class="control">
-            <input class="input recipeNum" type="text" placeholder="5">
+            <input class="input recipeNum" type="text" placeholder="3" disabled>
           </div>
         </div>
         <div class="field">
@@ -38,9 +40,26 @@
           </div>
           <p class="help">The average man should consume 2500 calories a day, for women, this is 2000 calories </p>
         </div>
+        
         <div class="select is-multiple">
+          <label class="label">Do you have any dietary preferences?</label>
+          <select class="input" multiple size="6" style="width: 600px" id="dietaryQuick" disabled>
+            <option value="none">None</option>
+            <option value="gluten-free">Gluten Free</option>
+            <option value="vegetarian">Vegetarian</option>
+            <option value="vegan">Vegan</option>
+            <option value="lacto-vegetarian">Lacto-Vegetarian</option>
+            <option value="ovo-vegetarian">Ovo-Vegetarian</option>
+            <option value="pescetarian">Pescetarian</option>
+            <option value="paleo">Paleo</option>
+            <option value="primal">Primal</option>
+          </select>
+        </div>
+
+        <!-- for future release - cuisine type -->
+        <!-- <div class="select is-multiple">
           <label class="label">Choose cuisine:</label>
-          <select class="input"multiple size="6" style="width: 600px" id="cuisineType">
+          <select class="input" multiple size="6" style="width: 600px" id="cuisineType">
             <option value="none">None</option>
             <option value="American">American</option>
             <option value="Cajun">Cajun</option>
@@ -55,26 +74,15 @@
             <option value="Nordic">Nordic</option>
             <option value="Spanish">Spanish</option>
             <option value="Vietnamese">Vietnamese</option>
-          </select>
+          </select> -->
 
-        </div>
+        <!-- </div> -->
 
       </section>
       <footer class="modal-card-foot">
         <button class="button is-success saveModal">Save changes</button>
         <button class="button" id="modal-cancel">Cancel</button>
       </footer>
-    </div>
-  </div>
-
-  <div class="columns create-meal-plan">
-    <div class="column is-one-third">
-      <div id="recipe-image"></div>
-      <div id="recipe-ingredients"></div>
-    </div>
-    <div class="column is-two-thirds">
-      <div id="recipe-title"></div>
-      <div id="recipe-steps"></div>
     </div>
   </div>
 
